--- a/index.css
+++ b/index.css
@@ -1,7 +1,3 @@
-.header{
-    color:cyan;
-}
-#heading{
-    color:greenyellow;
-   
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
